fitness difference chanaged from Long to BigInteger for supporting larger numbers, introduced constants class