@@ -14,7 +14,6 @@ public class Test {
 	private static final int MAX_PRIME_BITS = 50;
 	private static final int MIN_FACTORS = 2;
 	private static final int MAX_FACTORS = 6;
-	private static final Long LARGE_NUMBER = new Long(Long.MAX_VALUE/65536);
 	
 	public Test() {
 		listTest = new ArrayList<Long>(MAX_TEST_VECTOR_SIZE);
@@ -22,12 +21,12 @@ public class Test {
 		createTest();
 	}
 	
-	public Long getDifference(List<Long> listActuals) {
+	public BigInteger getDifference(List<Long> listActuals) {
 		if(listActuals == null || listAnswer.size()!=listActuals.size()) {
 			return null;
 		} else if(listAnswer.size()==listActuals.size()) {
-			Long differenceTotal = new Long(0);
-			Long difference;
+			BigInteger differenceTotal = BigInteger.valueOf(0);;
+			BigInteger difference;
 			Long actual;
 			for(int index=0; index<listAnswer.size(); index++) {
 				actual = listActuals.get(index);
@@ -36,21 +35,19 @@ public class Test {
 				}
 				
 				boolean isMultipleOfComposite = actual % listTest.get(index) == 0;	// ignore actuals that are a multiple of test composite
-				Long smallestDifference = Long.MAX_VALUE;
+				BigInteger smallestDifference = BigInteger.valueOf(Long.MAX_VALUE);
 				for(Long primeFactor : listAnswer.get(index)) {
 					if(!isMultipleOfComposite && actual>=2 && actual%primeFactor == 0) {
-						smallestDifference = new Long(0);	// actual is factor
+						smallestDifference = BigInteger.valueOf(0);	// actual is factor
 						break;
 					}
-					difference = Math.abs(primeFactor - actual);
-					if(smallestDifference > difference) {
+					difference = BigInteger.valueOf(primeFactor - actual);
+					difference = difference.abs();
+					if(smallestDifference.compareTo(difference)<0) {
 						smallestDifference = difference;
 					}
 				}
-				if(smallestDifference>LARGE_NUMBER) {
-					return null;
-				}
-				differenceTotal += smallestDifference;
+				differenceTotal = differenceTotal.add(smallestDifference);
 			}
 			return differenceTotal;
 		} else {
@@ -61,7 +58,7 @@ public class Test {
 	// random composite numbers
 	private void createTest() {
 		for(int index=0; index<MAX_TEST_VECTOR_SIZE; index++) {
-			BigInteger composite = Util.I1;
+			BigInteger composite = Constants.I1;
 			int factors = RANDOM.nextInt(MAX_FACTORS-MIN_FACTORS+1)+MIN_FACTORS;
 			int numberPrimeBits = MAX_PRIME_BITS/factors;
 			ArrayList<Long> listPrimeFactors = new ArrayList<Long>(factors);
